@@ -36,7 +36,7 @@ use Carp;
 
 use vars qw/ $VERSION %HTML_Escapes @LatexSections /;
 
-$VERSION = '0.52';
+$VERSION = '0.53';
 
 # Definitions of =headN -> latex mapping
 @LatexSections = (qw/
@@ -57,6 +57,8 @@ $VERSION = '0.52';
     'lt'        =>      '$<$',    #   ' left chevron, less-than
     'gt'        =>      '$>$',    #   ' right chevron, greater-than
     'quot'      =>      '"',      #   double quote
+    'sol'       =>      '/',
+    'verbar'    =>      '$|$',
 
     "Aacute"    =>      "\\'{A}",       #   capital A, acute accent
     "aacute"    =>      "\\'{a}",       #   small a, acute accent
@@ -675,7 +677,7 @@ pushed onto this stack. When the list context ends, it
 is popped from the stack. The array will be empty if no
 lists are active.
 
-Returns array of list information in array context
+Returns array of list information in list context
 Returns array ref in scalar context
 
 =cut
@@ -951,6 +953,9 @@ sub verbatim {
 
     # Clean trailing space
     $paragraph =~ s/\s+$//;
+
+    # Clean tabs
+    $paragraph =~ s/\t/        /g;
 
     $self->_output('\begin{verbatim}' . "\n$paragraph\n". '\end{verbatim}'."\n");
   }
@@ -1248,7 +1253,7 @@ sub add_item {
     $paragraph =~ s/^\s+//;
 
     my $type;
-    if ($paragraph eq '*') {
+    if (substr($paragraph, 0,1) eq '*') {
       $type = 'itemize';
     } elsif ($paragraph =~ /^\d/) {
       $type = 'enumerate';
@@ -1264,8 +1269,15 @@ sub add_item {
   my $type = $self->lists->[-1]->type;
 
   if ($type eq 'description') {
+    # Handle long items - long items do not wrap
+    if (length($paragraph) < 40) {
+      # A real description list item
+      $self->_output("\\item[$paragraph] \\mbox{}");
+    } else {
+      # The item is now simply bold text
+      $self->_output(qq{\\item \\textbf{$paragraph}});
+    }
 
-    $self->_output("\\item[$paragraph] \\mbox{}");
   } else {
     $self->_output('\item ');
   }
@@ -1392,6 +1404,8 @@ Special characters and the C<latex> equivalents are:
   &     \&
   \     $\backslash$
   ^     \^{}
+  ~     \~{}
+  |     $|$
 
 =cut
 
@@ -1411,6 +1425,12 @@ sub _replace_special_chars {
 
   # Replace ^ characters with \^{} so that $^F works okay
   $paragraph =~ s/(\^)/\\$1\{\}/g;
+
+  # Replace tilde (~) with \texttt{\~{}}
+  $paragraph =~ s/~/\\texttt\{\\~\{\}\}/g;
+
+  # Replace | with $|$
+  $paragraph =~ s'\|'$|$'g;
 
   # Now add the dollars around each \backslash
   $paragraph =~ s/(\\backslash)/\$$1\$/g;
